[tool.poetry]
name = "ninjavis"
version = "0.1.2"
description = "Generate visualization from Ninja build logs."
authors = ["Guilhem Charles"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/chagui/ninjavis"
repository = "https://github.com/chagui/ninjavis"

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "~=2.10"

[tool.poetry.dev-dependencies]
pylint = "^2.6"
mypy = "^0.790"

[tool.poetry.scripts]
ninjavis = "ninjavis:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

