[tool.poetry]
name = "ninjavis"
version = "0.2.1"
description = "Generate visualization from Ninja build logs."
authors = ["Guilhem Charles"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/chagui/ninjavis"
repository = "https://github.com/chagui/ninjavis"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6"
mypy = "^0.790"
black = "^21.8b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.6.1"

[tool.poetry.scripts]
ninjavis = "ninjavis:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38", "py39"]
include = '\.pyi?$'

