[tool.poetry]
name = "ninjavis"
version = "0.2.1"
description = "Generate visualization from Ninja build logs."
authors = ["Guilhem Charles"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/chagui/ninjavis"
repository = "https://github.com/chagui/ninjavis"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pylint = "^3.1"
mypy = "^1.10"
black = "^24.4"
isort = "^5.13"
flake8 = "7.0"
flake8-bugbear = "^24.4"
flake8-comprehensions = "^3.10.0"

[tool.poetry.scripts]
ninjavis = "ninjavis:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
indent = "    "
lexicographical = true
multi_line_output = 3
order_by_type = false
profile = "black"

